--- a/VaccineManagementSystem/src/UI/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
+++ b/VaccineManagementSystem/src/UI/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
@@ -25,18 +25,15 @@
                   <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
                   <Component id="jLabel5" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="txtPwd" max="32767" attributes="0"/>
                   <Component id="cbEnter" alignment="0" max="32767" attributes="0"/>
                   <Component id="cbNet" alignment="0" max="32767" attributes="0"/>
                   <Component id="txtUN" alignment="1" max="32767" attributes="0"/>
-                  <Group type="102" attributes="0">
-                      <Component id="txtName" min="-2" pref="181" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="txtName" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="lblPwdValid" pref="219" max="32767" attributes="0"/>
                   <Component id="lblUN" max="32767" attributes="0"/>
