Worked on populating Billing requests and fixed it

--- a/VaccineManagementSystem/src/UI/Hospital/Pharmacy/PharmacyAdminWorkArea.form
+++ b/VaccineManagementSystem/src/UI/Hospital/Pharmacy/PharmacyAdminWorkArea.form
@@ -276,7 +276,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="tblRequestfromClinic">
+            <Component class="javax.swing.JTable" name="tblVaccineRequest">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
